@@ -126,7 +126,7 @@ foreach $d (@doms) {
 	&save_domain($d);
 
 	# Run the after command
-	&set_domain_envs($d, "MODIFY_DOMAIN");
+	&set_domain_envs($d, "MODIFY_DOMAIN", undef, $oldd);
 	&made_changes();
 	&reset_domain_envs($d);
 
