@@ -299,7 +299,7 @@ print $text{'setup_done'},"<p>\n";
 
 # Run the after command
 &run_post_actions();
-&set_domain_envs($d, "MODIFY_DOMAIN");
+&set_domain_envs($d, "MODIFY_DOMAIN", undef, $oldd);
 &made_changes();
 &reset_domain_envs($d);
 &webmin_log("modify", "domain", $d->{'dom'}, $d);
