@@ -57,7 +57,7 @@ foreach $d (@doms) {
 	print $text{'setup_done'},"<p>\n";
 
 	# Run the after command
-	&set_domain_envs($d, "MODIFY_DOMAIN");
+	&set_domain_envs($d, "MODIFY_DOMAIN", undef, \%oldd);
 	&made_changes();
 	&reset_domain_envs($d);
 
